# memhack

./: .gitignore  LICENSE  README.md
include/memhack/: debug.h  error.h  linkage.h  memhack.h
project/: CMakeLists.txt  Makefile  memhack.sln  memhack.vcxproj  memhack.vcxproj.filters
src/: error.c  memhack.c
src/arch/linux/: memhack_linux.c
src/arch/windows/: memhack_windows.c
